[package]
name = "interface"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/bodoni/interface"
homepage = "https://github.com/bodoni/interface"
documentation = "https://bodoni.github.io/interface"
description = "An interface."

[[bin]]
name = "interface"
path = "src/bin/interface.rs"
test = false
doc = false

[lib]
name = "interface"
path = "src/lib/interface.rs"

[dependencies]
curve = "0.2"
opentype = "0.8"
postscript = "0.3"

[dependencies.glium]
version = "0.14"
default-features = false
features = ["glutin"]
