[package]
name = "interface"
version = "0.0.2"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface."
documentation = "https://bodoni.github.io/interface"
homepage = "https://github.com/bodoni/interface"
repository = "https://github.com/bodoni/interface"

[[bin]]
name = "interface"
path = "src/bin/interface.rs"
test = false
doc = false

[lib]
name = "interface"
path = "src/lib/interface.rs"

[dependencies]
curve = "*"
font = "*"

[dependencies.glium]
version = "0.14"
default-features = false
features = ["glutin"]
